# semantic_segmentation_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
assets/data/train/ann/: 198.json
config/: realsense.yaml  realsense_d415.yaml  train.json  visualize.rviz
docker/: Dockerfile  README.md  entrypoint.sh
launch/: realsense_semantic_segmentation.launch  test.launch
nodes/: semantic_segmentation_server.py  test.py
scripts/: eval.py  test.py  train.py  train_original.py
src/semantic_segmentation_ros/: dataset.py  detection.py  metrics.py  networks.py  rviz.py  utils.py
src/semantic_segmentation_ros/models/: deeplabv3.py  unet.py
src/semantic_segmentation_ros/utils/: data_utils.py  vis_utils.py
srv/: GetSegmentedDepthImage.srv  GetSegmentedImage.srv
