<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation_ros</name>
  <version>0.0.0</version>
  <description>The ROS Semantic Segmentation Package</description>

  <maintainer email="gingakennis123@icloud.com">Ginga Kennis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>
