<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation_ros</name>
  <version>1.0.0</version>
  <description>The ROS Semantic Segmentation Package</description>

  <maintainer email="gingakennis123@icloud.com">Ginga Kennis</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

</package>
